--- a/app/src/main/res/layout/activity_package_detail.xml
+++ b/app/src/main/res/layout/activity_package_detail.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 tools:context="com.example.rafaelanastacioalves.moby.jokeshowing.JokeShowingActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.example.rafaelanastacioalves.moby.jokeshowing.JokeShowingActivity">
 
-	<android.support.design.widget.AppBarLayout
-		android:id="@+id/detail_entity_name_detail_appbar"
-		android:layout_width="match_parent"
-		android:layout_height="wrap_content"
-		android:elevation="@dimen/material_appbar_elevation"
-		android:theme="@style/AppTheme.AppBarOverlay">
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/detail_entity_name_detail_appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="@dimen/material_appbar_elevation"
+        android:theme="@style/AppTheme.AppBarOverlay">
 
-		<android.support.v7.widget.Toolbar
-			android:id="@+id/detail_toolbar"
-			android:layout_width="match_parent"
-			android:layout_height="?attr/actionBarSize"
-			app:popupTheme="@style/AppTheme.PopupOverlay"
-			/>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/detail_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/AppTheme.PopupOverlay" />
 
 
-	</android.support.design.widget.AppBarLayout>
+    </android.support.design.widget.AppBarLayout>
 
-	<FrameLayout android:id="@+id/package_detail_fragment_container"
-	             app:layout_behavior="@string/appbar_scrolling_view_behavior"
-	             android:layout_width="match_parent"
-	             android:layout_height="match_parent"
-	             tools:context=".jokeshowing.JokeShowingActivity"
-	             xmlns:android="http://schemas.android.com/apk/res/android"
-	             xmlns:app="http://schemas.android.com/apk/res-auto"
-	             xmlns:tools="http://schemas.android.com/tools" />
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/package_detail_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
+        tools:context=".jokeshowing.JokeShowingActivity" />
 
 </android.support.design.widget.CoordinatorLayout>
 
