--- a/app/src/main/res/layout/detail_entity_viewholder.xml
+++ b/app/src/main/res/layout/detail_entity_viewholder.xml
@@ -14,12 +14,14 @@
 		android:layout_marginEnd="8dp"
 		android:layout_marginStart="16dp"
 		android:layout_marginTop="16dp"
+		android:layout_marginRight="8dp"
+		android:layout_marginLeft="16dp"
 		tools:text="@string/detail_entitiy_title_textview"
+		android:textSize="20sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		android:layout_marginRight="8dp"
-		android:layout_marginLeft="16dp"/>
+		/>
 
 
 
