--- a/app/src/main/res/layout/fragment_detail_entity_detail_view.xml
+++ b/app/src/main/res/layout/fragment_detail_entity_detail_view.xml
@@ -29,17 +29,24 @@
 
 		<TextView
 			android:id="@+id/joke_value_textview"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_marginLeft="@dimen/default_internal_margin"
-			android:layout_marginStart="@dimen/default_internal_margin"
 			android:layout_marginTop="@dimen/default_internal_margin"
+			android:textSize="24sp"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/joke_image_imageview"
 			tools:text="@string/valor_text"
 			/>
 
-
+		<TextView
+			android:id="@+id/joke_link_textview"
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			app:layout_constraintStart_toStartOf="parent"
+			android:layout_marginTop="@dimen/default_internal_margin"
+			app:layout_constraintTop_toBottomOf="@+id/joke_value_textview"
+			android:textSize="16sp"
+			tools:text="@string/link" />
 
 	</android.support.constraint.ConstraintLayout>
 </android.support.v4.widget.NestedScrollView>
